packages/typ/tests/fixtures/diagnostics/0364_external_identity_use_mismatch_04.ml.infer.expected
File "0364_external_identity_use_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0364_external_identity_use_mismatch_04 is not a valid module name.

File "0364_external_identity_use_mismatch_04.ml", line 2, characters 17-21:
2 | let _ = id_delta true
                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
